--- a/models/lstm/ffm.ipynb
+++ b/models/lstm/ffm.ipynb
@@ -2,24 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "array([[[3, 6, 4],\n",
+       "        [9, 4, 1],\n",
+       "        [7, 6, 8]],\n",
+       "\n",
+       "       [[4, 5, 5],\n",
+       "        [7, 4, 7],\n",
+       "        [5, 5, 6]],\n",
+       "\n",
+       "       [[1, 5, 4],\n",
+       "        [6, 5, 2],\n",
+       "        [7, 7, 9]]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "data = np.random.randint(1,10,size=(24,10))\n",
-    "data = np.array_split(data, 6)\n"
+    "data = np.random.randint(1,10,size=(3,3,3))\n",
+    "#data = np.array_split(data, 6)\n",
+    "data"
    ]
   },
   {
@@ -59,8 +70,7 @@
     }
    ],
    "source": [
-    "data_3d = data.reshape(2,5,24)\n",
-    "data_3d"
+    "data[:,-1,:]"
    ]
   }
  ],
