--- a/models/lstm/ffm.ipynb
+++ b/models/lstm/ffm.ipynb
@@ -2,75 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[3, 6, 4],\n",
-       "        [9, 4, 1],\n",
-       "        [7, 6, 8]],\n",
+       "array([[[1, 7]],\n",
        "\n",
-       "       [[4, 5, 5],\n",
-       "        [7, 4, 7],\n",
-       "        [5, 5, 6]],\n",
-       "\n",
-       "       [[1, 5, 4],\n",
-       "        [6, 5, 2],\n",
-       "        [7, 7, 9]]])"
+       "       [[5, 8]]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "data = np.random.randint(1,10,size=(3,3,3))\n",
+    "data = np.random.randint(1,10,size=(2,1,2))\n",
     "#data = np.array_split(data, 6)\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[9, 6, 7, 4, 7, 4, 5, 3, 3, 7, 4, 7, 3, 1, 8, 1, 1, 3, 7, 1, 1,\n",
-       "         3, 1, 7],\n",
-       "        [2, 3, 7, 5, 4, 4, 2, 1, 1, 5, 1, 8, 9, 5, 2, 6, 3, 4, 9, 9, 5,\n",
-       "         3, 7, 5],\n",
-       "        [4, 6, 2, 6, 4, 6, 2, 7, 9, 9, 3, 7, 1, 9, 5, 9, 4, 7, 6, 4, 4,\n",
-       "         6, 8, 3],\n",
-       "        [9, 7, 5, 3, 9, 3, 7, 4, 5, 7, 7, 4, 6, 8, 2, 4, 3, 3, 1, 5, 4,\n",
-       "         9, 6, 7],\n",
-       "        [5, 3, 7, 7, 3, 9, 6, 6, 5, 8, 1, 9, 8, 8, 6, 9, 5, 5, 9, 9, 1,\n",
-       "         1, 3, 1]],\n",
+       "array([[[1, 7]],\n",
        "\n",
-       "       [[5, 1, 8, 8, 1, 3, 1, 9, 9, 8, 8, 4, 8, 2, 6, 2, 5, 3, 2, 5, 6,\n",
-       "         3, 5, 8],\n",
-       "        [3, 2, 6, 8, 4, 9, 5, 1, 2, 7, 7, 4, 4, 3, 5, 7, 2, 6, 3, 8, 9,\n",
-       "         4, 2, 3],\n",
-       "        [6, 3, 3, 2, 1, 1, 5, 9, 4, 7, 4, 5, 4, 5, 8, 1, 1, 2, 7, 4, 7,\n",
-       "         2, 3, 1],\n",
-       "        [4, 9, 8, 7, 5, 6, 8, 7, 4, 2, 4, 3, 4, 2, 4, 9, 7, 7, 8, 9, 3,\n",
-       "         5, 5, 1],\n",
-       "        [8, 5, 6, 4, 7, 8, 6, 4, 7, 1, 8, 4, 3, 1, 1, 7, 4, 3, 4, 8, 6,\n",
-       "         6, 4, 5]]])"
+       "       [[5, 8]]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[:,-1,:]"
+    "data = data[:,-1,:]\n",
+    "data.reshape(2,1,2)"
    ]
   }
  ],
